Fixed issue on smaller display with the homepage

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   --main-color-transparent: rgba(0, 168, 246, .05);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
